--- a/web/start.html
+++ b/web/start.html
@@ -18,7 +18,7 @@
 		<div class="container">
 			<div class="col-md-12">
 				<h1 class="logo pull-left"></h1>		
-				<form  method="POST" action="start" class="form-inline pull-right" role="form">
+				<form  method="POST" action="serverside/start" class="form-inline pull-right" role="form">
 				  <div class="form-group">
 				    <div class="input-group">
 				      <div class="input-group-addon"><i class="fa fa-envelope-o"></i></div>
